2012-05-21 Ivan Kartolo <ivan@kartolo.de>
	* Bug #27633: use from address if reply-to is not set

2012-05-20 Ivan Kartolo <ivan@kartolo.de>
	* fix rdct Link in plain text

2012-05-10 Ivan Kartolo <ivan@kartolo.de>
	* Bug #36806: Speed boosting on cleaning duplicates in plain list array (thx to Tomas Norre Mikkelsen)

2012-04-29 Ivan Kartolo <ivan@kartolo.de>
	* remove SMTP config option
	* Bug #35680: trim the email before validating it.
	* Bug #35542: Sorting the dmail folder on the title

2012-04-14 Ivan Kartolo <ivan@kartolo.de>
	* swiftmailer: sending testmail per SM
	* code clean up, remove deprecated TYPO3 API
	* removing defer option
	* additional organization and TYPO3MID header

2012-03-30 Ivan Kartolo <ivan@kartolo.de>
	* quickmail fetching

2012-03-26 Ivan Kartolo <ivan@kartolo.de>
	* added Updater script to convert mail_content to base64_encoded
	* min TYPO3 to 4.5

2012-03-25 Ivan Kartolo <ivan@kartolo.de>
	* CGL identation
	* Bug #27863: base64 encoded mail content in the DB
	* swift: fetching dmail record

2012-03-21 Ivan Kartolo <ivan.kartolo@dkd.de>
	* removing old calendar lib. now using extJS Datepicker

2012-02-21 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #33571: fixed Edit-Page link

2012-02-12 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #33574: show error message on saving.

2012-02-11 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #33803: fixed deprecated testInt (4.6.0)
	* Bug #33727: added attachment filename in the header
	* Improvement #33623: reposition the manually invoke link.

2012-01-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature #13964: added TS for wrapping the sitemap content with the right boundaries.

2012-01-11 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #33046: fix fatal error in the CSV importer

2012-01-06 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Bug #10530: fixed loosing checkbox value in importer config.

2012-01-04 Ivan Kartolo <ivan.kartolo@dkd.de>